# skills

./: .gitignore  README.md  SKILL.md  SKILLS.md
.claude-plugin/: marketplace.json
ai-safe2-framework/: .markdownlint.yaml  ADVANCED_AGENT_THREATS.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EVOLUTION.md  INTEGRATIONS.md  LICENSE  MAINTAINERS.md  QUICKSTART_5_MIN.md  README.md  SECURITY.md  VANGUARD_PROGRAM.md  docker-compose.yml  pyproject.toml
ai-safe2-framework/01-sanitize-isolate/: README.md
ai-safe2-framework/02-audit-inventory/: README.md
ai-safe2-framework/03-fail-safe-recovery/: README.md
ai-safe2-framework/04-engage-monitor/: README.md
ai-safe2-framework/05-evolve-educate/: README.md
ai-safe2-framework/config/: default.yaml  prometheus.yml
ai-safe2-framework/examples/: quickstart_nhi_check.py
ai-safe2-framework/gateway/: main.py
ai-safe2-framework/guides/: DEVELOPER_IMPLEMENTATION.md  NO_CODE_AUTOMATION.md  TROUBLESHOOTING.md  ishi_hardening.md  openclaw-hardening.md  openclaw-integration-guide.md
ai-safe2-framework/research/: 001_rag_poisoning.md  002_nhi_secret_sprawl.md  003_swarm_consensus_failure.md  004_supply_chain_model_signing.md  005_memory_injection_minja.md  006_runtime_isolation_gvisor.md  007_jit_privilege_access.md  008_grc_framework_comparison.md  009_web_grounding_risk.md  010_governing_agent_types.md  011_the_kill_switch.md  012_the_engineered_liability_stack.md  013_the_7_layer_stack.md
ai-safe2-framework/resources/: openclaw_security_resource_map.md  pillar1_checklist_lite.md  readme.md
(+197 files in other folders)
